--- a/public/index.html
+++ b/public/index.html
@@ -292,16 +292,16 @@
           >
         </p>
 
-        <!--        <label for="choices-single-remote-fetch"-->
-        <!--          >Options from remote source (Fetch API)</label-->
-        <!--        >-->
-        <!--        <select-->
-        <!--          class="form-control"-->
-        <!--          name="choices-single-remote-fetch"-->
-        <!--          id="choices-single-remote-fetch"-->
-        <!--        >-->
-        <!--          <option value="">Pick an Arctic Monkeys' record</option>-->
-        <!--        </select>-->
+        <label for="choices-single-remote-fetch"
+          >Options from remote source (Fetch API)</label
+        >
+        <select
+          class="form-control"
+          name="choices-single-remote-fetch"
+          id="choices-single-remote-fetch"
+        >
+          <option value="">Pick an Arctic Monkeys' record</option>
+        </select>
 
         <label for="choices-single-remove-xhr"
           >Options from remote source (Fetch API) &amp; remove button</label
